--- a/wp-content/themes/aigi/assets/css/style.css
+++ b/wp-content/themes/aigi/assets/css/style.css
@@ -496,7 +496,9 @@ strong {
         border-right: none;
     }
     .has-sidebar,
-    .has-sidebar.sidebar-left,
+    .has-sidebar.sidebar-left {
+        flex-direction: column;
+    }
     .has-sidebar.sidebar-right {
         flex-direction: column-reverse;
     }
@@ -1451,7 +1453,9 @@ input[type="submit"].btn-transparent-white:hover {
     padding: 30px 0;
     transition: 0.3s ease;
 }
-
+.tabs-nav__item.text-left {
+    text-align: left;
+}
 .tabs-nav__item.is-active {
     border-color: var(--color-brand-m-blue-primary);
 }
@@ -1468,6 +1472,14 @@ input[type="submit"].btn-transparent-white:hover {
 }
 .dropdown-content .tabs-nav__item:not(last-child) {
     border-bottom: 1px solid var(--color-field-border);
+}
+.tab-heading {
+    font-weight: bold;
+    font-size: 22.44px;
+    line-height: 25px;
+    letter-spacing: 0.02em;
+    color: var(--color-brand-navy-primary);
+    margin-bottom: 26px;
 }
 
 /*************************************** CONTENT BLOCKS *****************************/
