updated resource post tile background image

--- a/wp-content/themes/aigi/assets/css/style.css
+++ b/wp-content/themes/aigi/assets/css/style.css
@@ -16,6 +16,7 @@
 @import 'how-to-use-styles.css';
 @import 'got-questions-styles.css';
 @import 'single-event-styles.css';
+@import 'landing-page-styles.css';
 @import 'admin-styles.css';
 
 /********************************* FONTS *****************************/
