--- a/wp-content/themes/aigi/assets/css/post-tile-styles.css
+++ b/wp-content/themes/aigi/assets/css/post-tile-styles.css
@@ -15,15 +15,18 @@
 .post-tile__wrap:last-child {
     border-bottom: 1px solid var(--color-field-border);
 }
-.search-page .post-tile__img {
-    /*width: 47%;*/
-    max-width: 286px;
+.post-tile__img {
     background-size: cover;
     background-repeat: no-repeat;
     display: flex;
     align-items: center;
     justify-content: center;
     background-image: url(/wp-content/themes/aigi/assets/images/toolkit-tile.svg);
+}
+
+.search-page .post-tile__img {
+    /*width: 47%;*/
+    max-width: 286px;
 }
 .search-page .post-tile__img-box {
     display: flex;
@@ -42,7 +45,7 @@
 .post-tile__img-box .post-tile__img {
     width: 100%;
 }
-.search-page .post-tile__img .post-tile__type-text {
+.post-tile__img .post-tile__type-text {
     width: auto;
     height: auto;
 }
@@ -166,7 +169,7 @@
 }
 .landing-page .post-tile__img-box {
     width: 49%;
-    max-width: 268px;
+    max-width: 319px;
 }
 .post-tile__img-box  .post-tile__img {
     width: 100%;
@@ -250,7 +253,40 @@
         margin-right: 6px;
     }
 }
+@media (max-width: 1024px) {
+    .landing-page .post-tile__img {
+        height: 250px;
+    }
+}
 @media (max-width: 992px) {
+
+    /*Post tile global search page*/
+
+    /*Post tile landing page*/
+    .landing-page .post-tile__wrap {
+        flex-direction: column;
+    }
+    .landing-page .post-tile__img {
+        display: none;
+    }
+    .landing-page .post-tile__content-header,
+    .landing-page .post-tile__content-body,
+    .landing-page .post-tile__content-footer {
+        width: 100%;
+    }
+    .landing-page .post-tile__wrap .btn-body {
+        width: 100%;
+    }
+
+
+    .post-tile__time {
+        margin-right: 20px;
+    }
+    .post-tile__time:after {
+        display: none;
+    }
+
+
     .post-tile__wrap {
         max-width: 440px;
         margin: 16px auto;
@@ -279,7 +315,9 @@
     .search-page .post-tile__wrap .btn-body {
         width: 100%;
     }
-
+    .post-tile__wrap.mob-style-2 .post-tile__img-box {
+        display: none;
+    }
     .post-tile__wrap.mob-style-2 .post-tile__mob-header,
     .post-tile__wrap.mob-style-2 .post-tile__mob-footer {
         display: block;
@@ -410,17 +448,17 @@
 }
 
 /****************************** Resources *********************/
-.search-page .post-tile__wrap.resource .post-tile__img {
+.post-tile__wrap.resource .post-tile__img {
     background-color: var(--color-p-secondary-green);
 }
-.search-page .post-tile__wrap.resource .post-tile__img .post-tile__type-text {
+.post-tile__wrap.resource .post-tile__img .post-tile__type-text {
     width: 100px;
 }
-.search-page .post-tile__wrap.resource.file .post-tile__img .post-tile__type-text,
-.search-page .post-tile__wrap.resource.publication .post-tile__img .post-tile__type-text{
+.post-tile__wrap.resource.file .post-tile__img .post-tile__type-text,
+.post-tile__wrap.resource.publication .post-tile__img .post-tile__type-text{
     width: 54px;
 }
-.search-page .post-tile__wrap.resource.tips .post-tile__img .post-tile__type-text {
+.post-tile__wrap.resource.tips .post-tile__img .post-tile__type-text {
     width: 75px;
 }
 .post-tile__wrap.resource .post-tile__mob-header {
@@ -428,10 +466,10 @@
 }
 
 /***************************** Toolkit **********************/
-.search-page .post-tile__wrap.toolkit .post-tile__img {
+.post-tile__wrap.toolkit .post-tile__img {
     background-color: var(--color-p-secondary-purple);
 }
-.search-page .post-tile__wrap.toolkit .post-tile__img .post-tile__type-text {
+.post-tile__wrap.toolkit .post-tile__img .post-tile__type-text {
     width: auto;
     height: auto;
 }
@@ -448,12 +486,12 @@
 
 
 /***************************** NEWS *************************/
-.search-page .post-tile__wrap.news .post-tile__img {
+.post-tile__wrap.news .post-tile__img {
     background-color: var(--color-h-secondary-blue);
 }
-.landing-page .post-tile__wrap.news .post-tile__img {
-    height: 311px;
-}
+/*.landing-page .post-tile__wrap.news .post-tile__img {*/
+/*    height: 311px;*/
+/*}*/
 .post-tile__wrap.news .post-tile__mob-header {
     background-color: var(--color-h-secondary-blue);
 }
@@ -557,6 +595,7 @@
 .post-tile__slider {
     width: 28%;
     max-width: 310px;
+    min-width: 310px;
     align-self: center;
 }
 .speakers-slider__img {
