updated main styles

--- a/wp-content/themes/aigi/assets/css/style.css
+++ b/wp-content/themes/aigi/assets/css/style.css
@@ -559,7 +559,8 @@ strong {
     align-items: center;
     text-align: center;
     letter-spacing: 2px;
-    text-transform: uppercase;
+    text-trans
+    : uppercase;
     color: #000000;
     text-decoration: none;
 }
