Main styles. Fixed value for content-tags__item link

--- a/wp-content/themes/aigi/assets/css/style.css
+++ b/wp-content/themes/aigi/assets/css/style.css
@@ -559,8 +559,7 @@ strong {
     align-items: center;
     text-align: center;
     letter-spacing: 2px;
-    text-trans
-    : uppercase;
+    text-transform: uppercase;
     color: #000000;
     text-decoration: none;
 }
