788600470 [AIGI] Resource Hub - updated styles

--- a/wp-content/themes/aigi/assets/css/landing-page-styles.css
+++ b/wp-content/themes/aigi/assets/css/landing-page-styles.css
@@ -91,6 +91,8 @@
     }
     .landing__filter-list {
         flex-direction: column;
+    }
+    .landing__filter-list.active {
         margin-top: 32px;
     }
     .landing__filter-title {
