--- a/wp-content/themes/aigi/assets/css/style.css
+++ b/wp-content/themes/aigi/assets/css/style.css
@@ -1902,7 +1902,11 @@ input[type="submit"].btn-transparent-white:hover {
 .subtitle2_404_m {
     display: none;
 }
-
+@media (max-width: 950px) {
+    .wrappper_404 .wrapper-1245 {
+        padding: 260px 15px 0 15px;
+    }
+}
 @media (max-width: 767px) {
     .error404 .wrappper_404 a.btn-body {
         background: transparent;
