--- a/wp-content/themes/aigi/assets/css/style.css
+++ b/wp-content/themes/aigi/assets/css/style.css
@@ -1503,7 +1503,17 @@ input[type="submit"].btn-transparent-white:hover {
     /*margin-right: 14px;*/
     object-fit: cover;
 }
-
+/*Centered reusable block with button*/
+.centered-content-wrapper {
+    text-align: center;
+    max-width: 700px;
+}
+@media (max-width: 767px) {
+    .centered-content-section {
+        padding-right: 15px;
+        padding-left: 15px;
+    }
+}
 /************************************ VIDEO BLOCK ******************************/
 .video__wrap {
     height: 828px;
