--- a/wp-content/themes/aigi/assets/css/single-event-styles.css
+++ b/wp-content/themes/aigi/assets/css/single-event-styles.css
@@ -58,6 +58,9 @@
     font-size: 14px;
     line-height: 22px;
     letter-spacing: 0.08em;
+
+}
+.post-details__text:not(:last-child) {
     margin-bottom: 16px;
 }
 .post-details__link {
@@ -68,7 +71,178 @@
     text-decoration-line: underline;
     color: var(--color-brand-m-blue-primary);
 }
+
+.single-event .accordion_btn {
+    font-size: 15.78px;
+    line-height: 20px;
+    letter-spacing: 0.02em;
+    padding: 18px 0;
+}
+.single-event .accordion_btn:before {
+    top: 25px;
+}
+.single-event .accordion_content {
+    font-size: 14px;
+    line-height: 22px;
+    letter-spacing: 0.08em;
+    padding: 16px 20px;
+}
+.single-event .tabs-nav {
+    justify-content: flex-start;
+}
+.single-event .tabs-nav__item {
+    flex: unset;
+    margin-right: 64px;
+}
+.single-event .tabs__content {
+    border-top: 1px solid var(--color-line-separator);
+    padding-top: 50px;
+}
+
+.single-event .profile-list {
+    padding: 32px 0;
+}
+
+.single-event__info-tabs {
+    margin-bottom: 64px;
+}
+.map-wrapper {
+    width: 100%;
+    height: 350px;
+}
+.social-links__heading {
+    font-size: 10px;
+    line-height: 12px;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    font-weight: bold;
+    color: var(--color-brand-m-blue-primary);
+    margin-bottom: 16px;
+}
+.social-links {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+.social-links__item:not(:last-child) {
+    margin-right: 25px;
+}
+.social-links__item-link i {
+    color: var(--color-text-field-blue);
+}
+
+.post-technical-block {
+    /*max-width: 190px;*/
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+}
+.post-technical-block.bordered {
+    border-top: 1px solid var(--color-line-separator);
+    padding-top: 32px;
+    padding-bottom: 32px;
+}
+.post-technical__item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.post-technical__item:not(:last-child) {
+    /*margin-right: 32px;*/
+}
+.post-technical__title {
+    font-size: 10px;
+    line-height: 12px;
+    text-align: center;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    color: var(--color-brand-m-blue-primary);
+    font-weight: bold;
+    margin-bottom: 12px;
+}
+
+/*subscribe form*/
+.subscribe-event-form__wrapper .accordion_content {
+    padding: 0;
+}
+.subscribe-event-form__wrapper {
+    padding: 32px;
+    background-color: var(--color-secondary-bg);
+}
+.subscribe-event-form__wrapper .gform_button {
+    min-width: 217px;
+    height: 50px;
+    font-family: Proxima Nova;
+    font-style: normal;
+    font-weight: 800;
+    font-size: 15px;
+    line-height: 14px!important;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    display: inline-block;
+    letter-spacing: 0.08em;
+    text-transform: uppercase;
+    text-decoration: none;
+    border-radius: 5px;
+    padding: 17px 20px;
+    transition: all .3s;
+    box-sizing: border-box;
+    position: relative;
+    cursor: pointer;
+    width: 100%;
+    color: #FFFFFF;
+    background-color: var(--color-brand-m-blue-primary);
+    /* box-shadow: inset 0 0 0 1px var(--color-brand-m-blue-primary); */
+    border: 1px solid var(--color-brand-m-blue-primary);
+}
+.subscribe-event-form__wrapper .gform_button:hover {
+    background-color: var(--color-h-secondary-blue);
+    border: 1px solid var(--color-h-secondary-blue);
+}
+.subscribe-event-form__wrapper .gform_wrapper.gravity-theme .gform_footer,
+.subscribe-event-form__wrapper .gform_wrapper.gravity-theme .gform_page_footer {
+    padding: 9px 0;
+}
+
+
+
+/*SOCIAL SHARE MODAL*/
+.social-share__wrapper.modal {
+    width: 100%;
+    max-width: 450px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: auto;
+}
+.social-share__header {
+    margin-bottom: 22px;
+}
+.social-share__title {
+    font-family: Proxima Nova;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 22.44px;
+    line-height: 25px;
+    letter-spacing: 0.02em;
+    color: var(--color-brand-navy-primary);
+}
+.social-share__wrapper div.heateor_sss_follow_ul a,
+.social-share__wrapper div.heateor_sss_horizontal_sharing div.heateor_sss_sharing_ul a {
+    margin: 8px;
+}
+
 @media (max-width: 767px) {
+    .subscribe-event-form {
+        width: 100vw;
+        margin-left: -16px;
+    }
+    .subscribe-event-form__wrapper {
+        padding: 32px 16px 16px;
+    }
     .single-event__pricing-item {
         padding: 16px 8px;
     }
@@ -86,5 +260,18 @@
         line-height: 24px;
         text-align: right;
         letter-spacing: 0.03em;
+    }
+
+    .single-event .tabs-nav {
+        justify-content: space-between;
+    }
+    .single-event .tabs-nav__item {
+        margin-right: unset;
+    }
+    .single-event .tabs__content {
+        padding-top: 32px;
+    }
+    .post-technical-block {
+        justify-content: space-around;
     }
 }
