793119188 [AIGI] Event Single page - gravity forms styles. updated

--- a/wp-content/themes/aigi/assets/css/style.css
+++ b/wp-content/themes/aigi/assets/css/style.css
@@ -821,6 +821,8 @@ strong {
 .gfield textarea,
 .gfield input[type="text"],
 .gfield input[type="button"],
+.gfield input[type="email"],
+.gfield input[type="tel"],
 .gfield input[type="submit"],
 .gfield input[type="reset"],
 .gfield input[type="search"],
@@ -831,6 +833,8 @@ strong {
 .gfield textarea:focus,
 .gfield input[type="text"]:focus,
 .gfield input[type="button"]:focus,
+.gfield input[type="email"]:focus,
+.gfield input[type="tel"]:focus,
 .gfield input[type="submit"]:focus,
 .gfield input[type="reset"]:focus,
 .gfield input[type="search"]:focus,
