--- a/wp-content/themes/aigi/assets/css/style.css
+++ b/wp-content/themes/aigi/assets/css/style.css
@@ -703,6 +703,9 @@ strong {
     padding-right: 8px;
 }
 /*padding-bottom*/
+.pb-xxxxl {
+    padding-bottom: 290px;
+}
 .pb-xxl {
     padding-bottom: 90px;
 }
@@ -722,6 +725,9 @@ strong {
     padding-bottom: 8px;
 }
 @media (max-width: 767px) {
+    .pb-xxxxl {
+        padding-bottom: 160px;
+    }
     .p-xxl {
         padding: 64px;
     }
@@ -2028,3 +2034,93 @@ input[type="submit"].btn-transparent-white:hover {
         letter-spacing: 0.05em;
     }
 }
+
+/***Form Block***/
+
+.form-block-wrapper {
+    text-align: center;
+    max-width: 640px;
+}
+.form-block-section  .gform_wrapper .gfield_validation_message, .form-block-section  .gform_wrapper .validation_message {
+    display: none;
+}
+.form-block-wrapper .text-media__text.heading {
+    font-weight: bold;
+    font-size: 30.35px;
+    line-height: 120%;
+    letter-spacing: 0.02em;
+}
+.form-block-wrapper  .text-media__text.medium-text p {
+    font-size: 15px;
+    line-height: 75%;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: var(--color-main-text);
+}
+.form-block-wrapper .form-wrapper {
+    margin-top: 50px;
+ }
+ .form-block-wrapper .form-wrapper .gform_wrapper.gravity-theme .gform_fields {
+    grid-row-gap: 10px;
+ }
+ .form-block-wrapper .form-wrapper .gform_wrapper.gravity-theme .gform_footer input {
+    min-width: 217px;
+    font-family: Proxima Nova;
+    font-style: normal;
+    font-weight: 800;
+    font-size: 15px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    display: inline-block;
+    letter-spacing: 0.08em;
+    text-transform: uppercase;
+    text-decoration: none;
+    border-radius: 5px;
+    padding: 17px 20px;
+    transition: all .3s;
+    box-sizing: border-box;
+    position: relative;
+    cursor: pointer;
+    width: 100%;
+    text-align: left;
+    background-color: var(--color-brand-m-blue-primary);
+    color: white;
+    border: unset;
+    line-height: 1;
+    }
+    .form-block-wrapper .form-wrapper .gform_wrapper input::-webkit-input-placeholder { 
+      font-size: 13.33px;
+    }
+    .form-block-wrapper .form-wrapper .gform_wrapper input::-moz-placeholder { 
+      font-size: 13.33px;
+    }
+    .form-block-wrapper .form-wrapper .gform_wrapper input:-ms-input-placeholder { 
+      font-size: 13.33px;
+    }
+    .form-block-wrapper .form-wrapper .gform_wrapper input:-moz-placeholder { 
+      font-size: 13.33px;
+    }
+ .form-block-wrapper .form-wrapper .gform_wrapper.gravity-theme .gform_footer::after {
+    content: '';
+    border: 4px solid transparent;
+    border-left: 4px solid white;
+    display: inline-block;
+    position: absolute;
+    top: 32px;
+    right: 23px;
+ }
+  .form-block-wrapper .form-wrapper .gform_wrapper.gravity-theme .gform_footer {
+    margin: 0;
+    padding: 10px 0;
+    position: relative;
+ }
+ .form-block-section {
+    background-size: auto;
+    background-position: center bottom;
+ }
+ @media only screen and (max-width: 641px) {
+    .form-block-wrapper .form-wrapper .gform_wrapper.gravity-theme input:not([type=radio]):not([type=checkbox]):not([type=image]):not([type=file]) {
+        line-height: 1;
+    }
+ }
