786514212 [AIGI] Text with Media - added select for image size cover/contain

--- a/wp-content/themes/aigi/assets/css/text-with-media-styles.css
+++ b/wp-content/themes/aigi/assets/css/text-with-media-styles.css
@@ -136,6 +136,12 @@
     height: 100%;
     object-fit: cover;
 }
+.text-media__media-wrapper .cover img {
+    object-fit: cover;
+}
+.text-media__media-wrapper .contain img {
+    object-fit: contain;
+}
 .text-media__media-wrapper .online__video-wrap {
 
 }
