--- a/wp-content/themes/aigi/assets/css/text-with-media-styles.css
+++ b/wp-content/themes/aigi/assets/css/text-with-media-styles.css
@@ -112,8 +112,8 @@
     line-height: 24px;
     letter-spacing: 0.03em;
 }
-.text-media__text.small-text,
-.text-media__text.small-text p {
+.text-light .text-media__text.small-text,
+.text-light .text-media__text.small-text p {
     color: #fff;
 }
 
