794695052 8.18 [AIGI] Got Questions? - add mob bg teture

--- a/wp-content/themes/aigi/assets/css/got-questions-styles.css
+++ b/wp-content/themes/aigi/assets/css/got-questions-styles.css
@@ -32,6 +32,9 @@
     .got-questions {
         padding: 50px 0;
     }
+    .got-questions.bg-texture:before {
+        background-image: url(/wp-content/themes/aigi/assets/images/art-got-questions-mob.svg)!important;
+    }
     .got-questions .highlighted__title {
         font-size: 18px;
         line-height: 22px;
