Upcoming event block bux fixes

--- a/wp-content/themes/aigi/assets/css/style.css
+++ b/wp-content/themes/aigi/assets/css/style.css
@@ -2133,7 +2133,15 @@ input[type="submit"].btn-transparent-white:hover {
  /***Upcoming events Block***/
 
  .event-block-wrapper .post-tile__wrap {
-    border: unset;
+    border: 1px solid #E0E0E0;
+    box-sizing: border-box;
+    border-radius: 5px;
+    background: #FFFFFF;
+    padding: 30px;
+    margin-top: 30px;
+ }
+ .event-block-wrapper .landing-page .post-tile__wrap:first-child {
+    border-top: 1px solid #E0E0E0;
  }
  .event-block-title {
     max-width: 803px;
@@ -2158,10 +2166,31 @@ input[type="submit"].btn-transparent-white:hover {
 }
 .event-block-wrapper .post-tile__img-box {
     width: 49%;
-    max-width: 319px;
+    max-width: 279px;
 }
 .event-block-wrapper .post-tile__wrap.event .post-tile__content-header {
     margin-bottom: 32px;
+}
+.event-block-wrapper .landing-page .post-tile__wrap.event .post-tile__img-box .post-tile__img {
+    height: 260px;
+}
+@media (max-width: 910px) {
+    .event-block-wrapper .post-tile__wrap.event {
+        max-width: unset;
+    }
+    .event-block-wrapper .post-tile__wrap {
+        padding: 0;
+    }
+
+}
+@media (max-width: 767px) {
+    .event-block-wrapper .post-tile__wrap.event .post-tile__content-header {
+        margin-bottom: 10px;
+    }       
+    .event-block-section .content-wrapper.wrapper-1245 {
+        padding-left: 0px;
+        padding-right: 0px;
+    }
 }
 
 /***Accordion style fix***/
