--- a/wp-content/themes/aigi/assets/css/text-with-media-styles.css
+++ b/wp-content/themes/aigi/assets/css/text-with-media-styles.css
@@ -31,6 +31,7 @@
 }
 .text-media__text-wrapper {
     padding-right: 60px;
+    padding-left: 56px;
 }
 .text-media__content.reverse .text-media__text-wrapper {
     padding-right: 32px;
@@ -125,6 +126,10 @@
     width: 50%;
 }
 
+
+.text-media__content.reverse .text-media__media-wrapper {
+    padding-left: 56px;
+}
 .text-media__media {
     width: 565px;
     min-width: 340px;
@@ -158,6 +163,11 @@
     letter-spacing: 0.05em;
 
 }
+@media (max-width: 1024px) {
+    .text-media__content.reverse .text-media__media-wrapper {
+        padding-left: 32px;
+    }
+}
 @media (max-width: 1200px) {
     .text-media__media {
         width: 100%;
@@ -168,6 +178,7 @@
     }
     .text-media__text-wrapper {
         padding-right: 32px;
+        padding-left: 32px;
     }
 }
 @media (max-width: 767px) {
@@ -182,6 +193,7 @@
     }
     .text-media__text-wrapper {
         padding-right: 0px;
+        padding-left: 0;
         margin-bottom: 32px;
     }
     .text-media__content.reverse .text-media__text-wrapper {
@@ -190,6 +202,7 @@
     }
     .text-media__content.reverse .text-media__media-wrapper {
         padding-right: 0px;
+        padding-left: 0;
         margin-bottom: 32px;
     }
 
