Content blocks - fixed and updated styles and templates for border and bg

--- a/wp-content/themes/aigi/assets/css/blockquote-styles.css
+++ b/wp-content/themes/aigi/assets/css/blockquote-styles.css
@@ -1,4 +1,6 @@
-
+.blockquote-slider__section {
+    position: relative;
+}
 .blockquote-slider__inner {
     overflow: hidden;
     padding: 90px 0;
