--- a/wp-content/themes/aigi/assets/css/resources-styles.css
+++ b/wp-content/themes/aigi/assets/css/resources-styles.css
@@ -195,6 +195,10 @@
     position: relative;
     word-break: break-all;
 }
+.resource-link:not(:last-child) a {
+    margin-bottom: 16px;
+    display: inline-block;
+}
 .resource-link.file a:before {
     background-image: url(/wp-content/themes/aigi/assets/images/download.svg);
     background-size: contain;
