--- a/wp-content/themes/aigi/assets/css/style.css
+++ b/wp-content/themes/aigi/assets/css/style.css
@@ -18,6 +18,15 @@
 @import 'single-event-styles.css';
 @import 'landing-page-styles.css';
 @import 'admin-styles.css';
+@import '404-page-syles.css';
+@import 'form-block-styles.css';
+@import 'upcoming-events-block-styles.css';
+@import 'sponsor-block-styles.css';
+@import 'partners-block-styles.css';
+
+
+
+
 
 /********************************* FONTS *****************************/
 @font-face {
@@ -1980,258 +1989,6 @@ input[type="submit"].btn-transparent-white:hover {
     }
 }
 
-
-/** 404 page **/
-
-.wrappper_404 {
-    height: 760px;
-    background-size: cover;
-}
-
-.wrappper_404 .wrapper-1245 {
-    padding-top: 260px;
-}
-
-.wrappper_404 h1 {
-    font-weight: bold;
-    font-size: 40.5px;
-    line-height: 110%;
-    letter-spacing: 0.02em;
-    color: #FFFFFF;
-    max-width: 730px;
-}
-
-.subtitle_404 {
-    margin: 50px 0;
-}
-
-.wrappper_404 .wrapper-1245 p {
-    font-weight: normal;
-    font-size: 16.88px;
-    line-height: 160%;
-    letter-spacing: 0.05em;
-    color: #FFFFFF;
-    margin: 29px 0;
-}
-
-.wrappper_404 .wrapper-1245 p.subtitle2_404 {
-    font-weight: normal;
-    font-size: 14.4px;
-    line-height: 130%;
-    letter-spacing: 0.05em;
-    color: #FFFFFF;
-}
-
-.subtitle2_404_m {
-    display: none;
-}
-@media (max-width: 950px) {
-    .wrappper_404 .wrapper-1245 {
-        padding: 260px 15px 0 15px;
-    }
-}
-@media (max-width: 767px) {
-    .error404 .wrappper_404 a.btn-body {
-        background: transparent;
-        border: unset;
-        text-decoration: underline;
-    }
-    .error404 .wrappper_404 a.btn-body span {
-        text-decoration: underline;
-    }
-    .subtitle2_404_m {
-        display: block;
-    }
-    .subtitle2_404_d {
-        display: none;
-    }
-    .wrappper_404 .wrapper-1245 {
-        padding: 130px 15px 0 15px;
-    }
-    .wrappper_404 {
-        text-align: center;
-        height: 500px;
-        background-position-y: bottom;
-    }
-    h1 {
-        font-weight: bold;
-        font-size: 32.44px;
-        line-height: 110%;
-        text-align: center;
-        letter-spacing: 0.02em;
-    }
-    .subtitle_404 {
-        font-size: 15px;
-        line-height: 160%;
-        text-align: center;
-        letter-spacing: 0.03em;
-    }
-    .wrappper_404 .wrapper-1245 p.subtitle2_404 {
-        font-size: 14px;
-        line-height: 18px;
-        text-align: center;
-        letter-spacing: 0.05em;
-    }
-}
-
-/***Form Block***/
-
-.form-block-wrapper {
-    text-align: center;
-    max-width: 640px;
-}
-.form-block-section  .gform_wrapper .gfield_validation_message, .form-block-section  .gform_wrapper .validation_message {
-    display: none;
-}
-.form-block-wrapper .text-media__text.heading {
-    font-weight: bold;
-    font-size: 30.35px;
-    line-height: 120%;
-    letter-spacing: 0.02em;
-}
-.form-block-wrapper  .text-media__text.medium-text p {
-    font-size: 15px;
-    line-height: 75%;
-    text-align: center;
-    letter-spacing: 0.03em;
-    color: var(--color-main-text);
-}
-.form-block-wrapper .form-wrapper {
-    margin-top: 50px;
- }
- .form-block-wrapper .form-wrapper .gform_wrapper.gravity-theme .gform_fields {
-    grid-row-gap: 10px;
- }
- .form-block-wrapper .form-wrapper .gform_wrapper.gravity-theme .gform_footer input {
-    min-width: 217px;
-    font-family: Proxima Nova;
-    font-style: normal;
-    font-weight: 800;
-    font-size: 15px;
-    display: flex;
-    align-items: center;
-    text-align: center;
-    display: inline-block;
-    letter-spacing: 0.08em;
-    text-transform: uppercase;
-    text-decoration: none;
-    border-radius: 5px;
-    padding: 17px 20px;
-    transition: all .3s;
-    box-sizing: border-box;
-    position: relative;
-    cursor: pointer;
-    width: 100%;
-    text-align: left;
-    background-color: var(--color-brand-m-blue-primary);
-    color: white;
-    border: unset;
-    line-height: 1;
-    }
-    .form-block-wrapper .form-wrapper .gform_wrapper input::-webkit-input-placeholder { 
-      font-size: 13.33px;
-    }
-    .form-block-wrapper .form-wrapper .gform_wrapper input::-moz-placeholder { 
-      font-size: 13.33px;
-    }
-    .form-block-wrapper .form-wrapper .gform_wrapper input:-ms-input-placeholder { 
-      font-size: 13.33px;
-    }
-    .form-block-wrapper .form-wrapper .gform_wrapper input:-moz-placeholder { 
-      font-size: 13.33px;
-    }
- .form-block-wrapper .form-wrapper .gform_wrapper.gravity-theme .gform_footer::after {
-    content: '';
-    border: 4px solid transparent;
-    border-left: 4px solid white;
-    display: inline-block;
-    position: absolute;
-    top: 32px;
-    right: 23px;
- }
-  .form-block-wrapper .form-wrapper .gform_wrapper.gravity-theme .gform_footer {
-    margin: 0;
-    padding: 10px 0;
-    position: relative;
- }
- .form-block-section {
-    background-size: auto;
-    background-position: center bottom;
- }
-  @media (max-width: 767px) {
-    .form-block-wrapper .text-media__text.heading p {
-        color: var(--color-brand-navy-primary);
-    }
- }
- @media only screen and (max-width: 641px) {
-    .form-block-wrapper .form-wrapper .gform_wrapper.gravity-theme input:not([type=radio]):not([type=checkbox]):not([type=image]):not([type=file]) {
-        line-height: 1;
-    }
- }
-
- /***Upcoming events Block***/
-
- .event-block-wrapper .post-tile__wrap {
-    border: 1px solid #E0E0E0;
-    box-sizing: border-box;
-    border-radius: 5px;
-    background: #FFFFFF;
-    padding: 30px;
-    margin-top: 30px;
- }
- .event-block-wrapper .landing-page .post-tile__wrap:first-child {
-    border-top: 1px solid #E0E0E0;
- }
- .event-block-title {
-    max-width: 803px;
-    font-family: Proxima Nova;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 22.44px;
-    line-height: 25px;
-    letter-spacing: 0.02em;
-    color: var(--color-brand-navy-primary);
-    margin-bottom: 22px;
- }
- .event-block-subtitle {
-    max-width: 803px;
-    font-size: 16px;
-    line-height: 26px;
-    letter-spacing: 0.1em;
-    color: var(--color-main-text);
- }
-.event-block-wrapper .post-tile__wrap.event .post-tile__content {
-    min-height: 355px;
-}
-.event-block-wrapper .post-tile__img-box {
-    width: 49%;
-    max-width: 268px;
-}
-.event-block-wrapper .post-tile__wrap.event .post-tile__content-header {
-    margin-bottom: 32px;
-}
-.event-block-wrapper .landing-page .post-tile__wrap.event .post-tile__img-box .post-tile__img {
-    height: 260px;
-}
-@media (max-width: 910px) {
-    .event-block-wrapper .post-tile__wrap.event {
-        max-width: unset;
-    }
-    .event-block-wrapper .post-tile__wrap {
-        padding: 0;
-    }
-
-}
-@media (max-width: 767px) {
-    .event-block-wrapper .post-tile__wrap.event .post-tile__content-header {
-        margin-bottom: 10px;
-    }       
-    .event-block-section .content-wrapper.wrapper-1245 {
-        padding-left: 0px;
-        padding-right: 0px;
-    }
-}
-
 /***Accordion style fix***/
 .accordion_btn {
     padding-right: 30px;
@@ -2248,246 +2005,5 @@ input[type="submit"].btn-transparent-white:hover {
 @media (max-width: 767px) {
     .accordion-block-wrapper .accordion_panel.active {
         padding: 15px 18px;
-    }
-}
-
-/***Sponsor block***/
-
-.sponsor-block-wrapper {
-    display: flex;
-        justify-content: center;
-}
-.sponsor-block-subtitle {
-    font-weight: bold;
-    font-size: 10.53px;
-    line-height: 12px;
-    letter-spacing: 2px;
-    text-transform: uppercase;
-    color: var(--color-brand-navy-primary);
-    margin-bottom: 20px;
-}
-.sponsor-blue-subtitle {
-    font-weight: bold;
-    font-size: 10.53px;
-    letter-spacing: 2px;
-    text-transform: uppercase;
-    line-height: 12px;
-    color: var(--color-brand-m-blue-primary);
-    margin-bottom: 15px;
-}
-.sponsor-block-logo {
-    width: 40%;
-    text-align: center;
-    padding: 30px 50px;
-}
-.sponsor-block-content {    
-    width: 60%;
-    padding: 20px;
-    padding: 20px 50px 20px 20px;
-}   
-.sponsor-block-content h3 {
-    margin-bottom: 25px;
-}   
-@media (max-width: 850px) {
-    .sponsor-block-logo {
-        padding: 10px;
-    }
-}
-@media (max-width: 767px) {
-    .sponsor-block-wrapper {
-        flex-wrap: wrap;
-    }
-    .sponsor-block-content, .sponsor-block-logo {
-        width: 100%;
-    }
-    .sponsor-block-content {
-        padding: 20px 0px 20px 0px;
-    }
-    .sponsor-block-wrapper.content-wrapper.wrapper-1245 {
-        padding: 0;
-    }
-}
-
-
-
-/***Partners block***/
-
-.partners_item {
-    width: 270px;
-    height: 133px;
-    border-radius: 5px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: white;
-    padding: 30px;
-    position: relative;
-    cursor: pointer;
-}
-.partners_item img {
-    max-width: 100%;
-}
-.partners_item_popup_wrapper {
-    display: none;
-}
-.partners-block-section .content-wrapper.wrapper-1245 {
-    padding-left: 0;
-    padding-right: 0;
-}
-.partners-block-section .partners_item:after {
-    content: '';
-    background-image: url(../images/Information_Icon.svg);
-    width: 16px;
-    height: 16px;
-    background-repeat: no-repeat;
-    background-position: center;
-    position: absolute;
-    top: 9px;
-    right: 9px;
-}
-#popup_close_button {
-    width: 16px;
-    height: 16px;
-    background-image: url(../images/close-blue.svg);
-    background-repeat: no-repeat;
-    background-position: center;
-    position: absolute;
-    top: 30px;
-    right: 30px;
-    cursor: pointer;
-}
-.partners_item_popup_content_wrapper {
-    position: absolute;
-    background: white;
-    z-index: 10000000000000000000000000000000000000000000000000001;
-    max-width: 1130px;
-    padding: 60px;
-    margin: 20px;
-    border-radius: 5px;
-    max-height: 90%;
-}
-
-.partners_item_popup_overlay {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background: rgba(19, 16, 50, 0.8);
-    z-index: 1000000000000000000000000000000000000000000000000000;
-}
-.partners_item_popup_wrapper, #partner-popup-main-wrapper {
-    display: none;
-}
-#partner-popup-main-wrapper.popup_opened {
-    display: block;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    position: fixed;
-}
-#partner-popup-main-wrapper.popup_opened .partners_item_popup_wrapper {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    pointer-events: all;
-    height: 100%;
-}
-.popup-social i {
-    color: black;
-}
-.popup-social {
-    display: flex;
-}
-.partners-block-section {
-    max-width: 1246px;
-    margin: 0 auto;
-    margin-top: 50px;
-    margin-bottom: 50px;
-}
-.partners-block-section .rslider .slick-slide {
-    margin: 0 16px;
-}
-.partners_item_popup_logo img {
-    max-width: 100%;
-}
-.partners_item_popup_header {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding-bottom: 40px;
-    border-bottom: 1px solid #DFDFDF;
-    margin-bottom: 30px;
-}
-.partners_item_popup_text {
-    width: 65%;
-    margin-left: 20px;
-}
-.partners_item_popup_text p, .partners_item_popup_text div {
-    max-width: 270px;
-    font-size: 15px;
-    line-height: 160%;
-}
-.partners_item_popup_headline {
-    font-size: 18px;
-    line-height: 22px;
-    letter-spacing: 0.02em;
-    color: var(--color-brand-navy-primary);
-    font-weight: bold;
-    margin-bottom: 16px;
-}
-.popup-email a, .popup-web a {
-    font-size: 14px;
-    line-height: 160%;
-    color: #0762A4;8
-    letter-spacing: 0.7px;
-    font-weight: bold;
-}
-.popup-phone span {
-    text-transform: uppercase;
-    font-weight: bold;
-}
-.popup-address, .popup-web {
-    margin-bottom: 30px;
-}
-.popup-phone {
-    margin-bottom: 20px;
-}
-.partners_item_popup_content_inner h4 {
-    color: var(--color-brand-navy-primary);
-    letter-spacing: 0.02em;
-    line-height: 110%;
-    padding-bottom: 15px;
-}
-.popup-social p {
-    margin-right: 20px;
-}
-@media (max-width:  767px) {
-    .partners_item_popup_header {
-        flex-wrap: wrap;
-        text-align: center;
-    }
-    .partners_item_popup_text {
-        width: 100%;
-        margin-left: unset;
-    }
-    .partners_item_popup_content_wrapper {
-        padding: 20px;
-        overflow-y: scroll;
-        overflow-x: hidden;
-    }
-    .partners-block-section {
-        padding-left: 25px;
-        padding-right: 25px;
-    }
-    .popup-social {
-        justify-content: center;
-    }
-    .popup-social p {
-        margin: 0 15px;
-    }
-}
-@media (max-width: 580px) {
-    .partners_item_wrapper.slick-slide.slick-current.slick-active {
-        width: 270px!important;
     }
 }
