conneected popup file

--- a/wp-content/themes/aigi/assets/css/style.css
+++ b/wp-content/themes/aigi/assets/css/style.css
@@ -17,6 +17,7 @@
 @import 'got-questions-styles.css';
 @import 'single-event-styles.css';
 @import 'landing-page-styles.css';
+@import 'popup-styles.css';
 @import 'admin-styles.css';
 
 /********************************* FONTS *****************************/
