updated author popup for case syudies and added template for social share block

--- a/wp-content/themes/aigi/assets/css/partners-block-styles.css
+++ b/wp-content/themes/aigi/assets/css/partners-block-styles.css
@@ -112,6 +112,7 @@
     max-width: 270px;
     font-size: 15px;
     line-height: 160%;
+    margin-bottom: 12px;
 }
 .partners_item_popup_headline {
     font-size: 18px;
