--- a/wp-content/themes/aigi/assets/css/single-event-styles.css
+++ b/wp-content/themes/aigi/assets/css/single-event-styles.css
@@ -280,4 +280,11 @@
     .post-technical-block {
         justify-content: space-around;
     }
+
+    .modal .social-links {
+        justify-content: center;
+    }
+    .modal .social-links__item {
+        margin: 0 10px;
+    }
 }
