--- a/wp-content/themes/aigi/assets/css/post-tile-styles.css
+++ b/wp-content/themes/aigi/assets/css/post-tile-styles.css
@@ -479,6 +479,29 @@
 
 }
 
+/****************************** Case studies ******************/
+.post-tile__wrap.case_studies .post-tile__img {
+    background-color: var(--color-p-secondary-purple);
+}
+.post-tile__wrap.case_studies .post-tile__mob-header {
+    background-color: var(--color-p-secondary-purple);
+}
+@media (max-width: 992px) {
+    .post-tile__wrap.case_studies .post-tile__location {
+        display: none;
+    }
+    /*.post-tile__wrap.case_studies .post-tile__left,*/
+    /*.search-page .post-tile__wrap.case_studies .post-tile__left {*/
+    /*    flex-direction: column-reverse;*/
+    /*    align-items: center;*/
+    /*}*/
+    /*.post-tile__wrap.case_studies .post-tile__content-header {*/
+    /*    width: 100%;*/
+    /*    text-align: center;*/
+    /*    flex-direction: column;*/
+    /*    align-items: center;*/
+    /*}*/
+}
 /****************************** Resources *********************/
 .post-tile__wrap.resource .post-tile__img {
     background-color: var(--color-p-secondary-green);
