827661481 [AIGI] Testimonials - created template, added styled, created custom fields

--- a/wp-content/themes/aigi/assets/css/style.css
+++ b/wp-content/themes/aigi/assets/css/style.css
@@ -24,6 +24,7 @@
 @import 'upcoming-events-block-styles.css';
 @import 'sponsor-block-styles.css';
 @import 'partners-block-styles.css';
+@import 'testimonials-styles.css';
 
 
 
