Partners block styles fix

--- a/wp-content/themes/aigi/assets/css/partners-block-styles.css
+++ b/wp-content/themes/aigi/assets/css/partners-block-styles.css
@@ -84,7 +84,7 @@
 .popup-social {
     display: flex;
 }
-.partners-block-section {
+.partners-block-section.resources-slider {
     max-width: 1246px;
     margin: 0 auto;
     margin-top: 50px;
