Partners block border-radius fix

--- a/wp-content/themes/aigi/assets/css/partners-block-styles.css
+++ b/wp-content/themes/aigi/assets/css/partners-block-styles.css
@@ -89,6 +89,7 @@
     margin: 0 auto;
     margin-top: 50px;
     margin-bottom: 50px;
+    border-radius: 5px;
 }
 .partners-block-section .rslider .slick-slide {
     margin: 0 16px;
